# WalAuth

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 832c615c009f_add_full_name_field_to_the_user_model.py  ee030eb89b6c_create_users_table.py
src/walauth/: app.py  main.py
src/walauth/core/: config.py  exceptions.py  logging.py
src/walauth/db/: session.py
src/walauth/models/: __init__.py  user.py
tests/: conftest.py  test_health.py
