[project]
name = "walauth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ravinderdhokwal", email = "ravindercodes@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
start = "walauth.main:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports, undefined names, etc.)
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modernize syntax for your Python version)
    "B",   # flake8-bugbear (common bug-prone patterns)
    "SIM", # flake8-simplify (unnecessarily complex code)
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["walauth"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"